refactor train method

--- a/experiments/sweep_pmlb/analyze_pmlb.ipynb
+++ b/experiments/sweep_pmlb/analyze_pmlb.ipynb
@@ -35,10 +35,10 @@
     "results_dir = '/accounts/projects/vision/chandan/class-weight-uncertainty/results/pmlb'\n",
     "os.makedirs(results_dir, exist_ok=True)\n",
     "# depending on how much is saved, this may take a while\n",
-    "# out_dir = '/scratch/users/vision/chandan/pacmed/logistic'\n",
-    "# out_dir = '/scratch/users/vision/chandan/pacmed/rf'\n",
-    "out_dir = '/scratch/users/vision/chandan/pacmed/gb'\n",
-    "# out_dir = '/scratch/users/vision/chandan/pacmed/mlp_sweep'\n",
+    "# out_dir = '/scratch/users/vision/chandan/pacmed/with_flips/logistic'\n",
+    "# out_dir = '/scratch/users/vision/chandan/pacmed/with_flips/rf'\n",
+    "out_dir = '/scratch/users/vision/chandan/pacmed/with_flips/gb'\n",
+    "# out_dir = '/scratch/users/vision/chandan/pacmed/with_flips/mlp_sweep'\n",
     "fnames = sorted([fname for fname in os.listdir(out_dir)])\n",
     "results_list = [pd.Series(pkl.load(open(oj(out_dir, fname), \"rb\"))) for fname in tqdm(fnames)]\n",
     "results = pd.concat(results_list, axis=1).T.infer_objects()"
@@ -53,260 +53,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>dset_name</th>\n",
-       "      <th>seed</th>\n",
-       "      <th>class_weight</th>\n",
-       "      <th>model_type</th>\n",
-       "      <th>flip_frac</th>\n",
-       "      <th>out_dir</th>\n",
-       "      <th>pid</th>\n",
-       "      <th>cw_flipped_diff_train</th>\n",
-       "      <th>cw_flipped_diff_p_train</th>\n",
-       "      <th>cw_loss_percentages_train</th>\n",
-       "      <th>...</th>\n",
-       "      <th>pe_flipped_diff_p_test</th>\n",
-       "      <th>pe_loss_percentages_test</th>\n",
-       "      <th>pe_loss_performances_test</th>\n",
-       "      <th>pe_loss_auc_test</th>\n",
-       "      <th>pe_auc_percentages_test</th>\n",
-       "      <th>pe_auc_performances_test</th>\n",
-       "      <th>pe_auc_auc_test</th>\n",
-       "      <th>pe_calibration_pred_test</th>\n",
-       "      <th>pe_calibration_true_test</th>\n",
-       "      <th>pe_calibration_rmse_test</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>GAMETES_Epistasis_2-Way_1000atts_0.4H_EDM-1_ED...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>gb</td>\n",
-       "      <td>0.1</td>\n",
-       "      <td>/scratch/users/vision/chandan/pacmed/gb</td>\n",
-       "      <td>10646871537542481801</td>\n",
-       "      <td>-0.012521</td>\n",
-       "      <td>0.078405</td>\n",
-       "      <td>[6.018518518518518, 6.111111111111111, 6.20370...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.470689</td>\n",
-       "      <td>[18.055555555555557, 18.333333333333332, 18.61...</td>\n",
-       "      <td>[88.33431023832314, 88.83270965560031, 89.3330...</td>\n",
-       "      <td>20248.106659</td>\n",
-       "      <td>[18.055555555555557, 18.333333333333332, 18.61...</td>\n",
-       "      <td>[0.4208494208494209, 0.4221808014911464, 0.423...</td>\n",
-       "      <td>36.035153</td>\n",
-       "      <td>[0.15340174516811111, 0.3205623240177217, 0.50...</td>\n",
-       "      <td>[0.5, 0.5294117647058824, 0.5470588235294118, ...</td>\n",
-       "      <td>0.344009</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>GAMETES_Epistasis_2-Way_20atts_0.1H_EDM-1_1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>gb</td>\n",
-       "      <td>0.1</td>\n",
-       "      <td>/scratch/users/vision/chandan/pacmed/gb</td>\n",
-       "      <td>86463448325324707014</td>\n",
-       "      <td>-0.000807</td>\n",
-       "      <td>0.449455</td>\n",
-       "      <td>[6.018518518518518, 6.111111111111111, 6.20370...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.226692</td>\n",
-       "      <td>[18.055555555555557, 18.333333333333332, 18.61...</td>\n",
-       "      <td>[73.70044851724408, 74.22251361305605, 74.7450...</td>\n",
-       "      <td>17803.917915</td>\n",
-       "      <td>[18.055555555555557, 18.333333333333332, 18.61...</td>\n",
-       "      <td>[0.5819047619047619, 0.5833333333333334, 0.584...</td>\n",
-       "      <td>48.798484</td>\n",
-       "      <td>[0.16057567037288972, 0.33380072349805534, 0.4...</td>\n",
-       "      <td>[0.5, 0.37362637362637363, 0.5319148936170213,...</td>\n",
-       "      <td>0.204525</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>GAMETES_Epistasis_2-Way_20atts_0.4H_EDM-1_1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>gb</td>\n",
-       "      <td>0.1</td>\n",
-       "      <td>/scratch/users/vision/chandan/pacmed/gb</td>\n",
-       "      <td>72321427046675171834</td>\n",
-       "      <td>-0.003581</td>\n",
-       "      <td>0.324800</td>\n",
-       "      <td>[6.018518518518518, 6.111111111111111, 6.20370...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.084187</td>\n",
-       "      <td>[18.055555555555557, 18.333333333333332, 18.61...</td>\n",
-       "      <td>[48.91155412961351, 49.49696358445241, 51.0794...</td>\n",
-       "      <td>14843.386836</td>\n",
-       "      <td>[18.055555555555557, 18.333333333333332, 18.61...</td>\n",
-       "      <td>[0.7847619047619048, 0.7870370370370371, 0.789...</td>\n",
-       "      <td>63.245974</td>\n",
-       "      <td>[0.16453236458886983, 0.3384541256039423, 0.48...</td>\n",
-       "      <td>[0.25, 0.30337078651685395, 0.4769230769230769...</td>\n",
-       "      <td>0.103648</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>GAMETES_Epistasis_3-Way_20atts_0.2H_EDM-1_1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>gb</td>\n",
-       "      <td>0.1</td>\n",
-       "      <td>/scratch/users/vision/chandan/pacmed/gb</td>\n",
-       "      <td>73080375156272463361</td>\n",
-       "      <td>-0.007132</td>\n",
-       "      <td>0.122626</td>\n",
-       "      <td>[6.018518518518518, 6.111111111111111, 6.20370...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.063253</td>\n",
-       "      <td>[18.055555555555557, 18.333333333333332, 18.61...</td>\n",
-       "      <td>[72.72622245211723, 73.28847701427406, 73.8516...</td>\n",
-       "      <td>18358.214357</td>\n",
-       "      <td>[18.055555555555557, 18.333333333333332, 18.61...</td>\n",
-       "      <td>[0.5482625482625483, 0.5442684063373718, 0.549...</td>\n",
-       "      <td>43.569490</td>\n",
-       "      <td>[0.16995324258995165, 0.32527788458364687, 0.5...</td>\n",
-       "      <td>[1.0, 0.5280898876404494, 0.4672897196261682, ...</td>\n",
-       "      <td>0.392887</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>GAMETES_Heterogeneity_20atts_1600_Het_0.4_0.2_...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>gb</td>\n",
-       "      <td>0.1</td>\n",
-       "      <td>/scratch/users/vision/chandan/pacmed/gb</td>\n",
-       "      <td>74783160552518244403</td>\n",
-       "      <td>-0.001638</td>\n",
-       "      <td>0.423066</td>\n",
-       "      <td>[6.018518518518518, 6.111111111111111, 6.20370...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.362610</td>\n",
-       "      <td>[18.055555555555557, 18.333333333333332, 18.61...</td>\n",
-       "      <td>[61.909359754232476, 63.58460050279295, 64.128...</td>\n",
-       "      <td>16758.155347</td>\n",
-       "      <td>[18.055555555555557, 18.333333333333332, 18.61...</td>\n",
-       "      <td>[0.6618773946360152, 0.6626281453867662, 0.662...</td>\n",
-       "      <td>52.782284</td>\n",
-       "      <td>[0.14705911565129884, 0.3332083494314001, 0.50...</td>\n",
-       "      <td>[0.25, 0.43373493975903615, 0.4708994708994709...</td>\n",
-       "      <td>0.126191</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 51 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                           dset_name  seed  class_weight  \\\n",
-       "0  GAMETES_Epistasis_2-Way_1000atts_0.4H_EDM-1_ED...     0             1   \n",
-       "1        GAMETES_Epistasis_2-Way_20atts_0.1H_EDM-1_1     0             1   \n",
-       "2        GAMETES_Epistasis_2-Way_20atts_0.4H_EDM-1_1     0             1   \n",
-       "3        GAMETES_Epistasis_3-Way_20atts_0.2H_EDM-1_1     0             1   \n",
-       "4  GAMETES_Heterogeneity_20atts_1600_Het_0.4_0.2_...     0             1   \n",
-       "\n",
-       "  model_type  flip_frac                                  out_dir  \\\n",
-       "0         gb        0.1  /scratch/users/vision/chandan/pacmed/gb   \n",
-       "1         gb        0.1  /scratch/users/vision/chandan/pacmed/gb   \n",
-       "2         gb        0.1  /scratch/users/vision/chandan/pacmed/gb   \n",
-       "3         gb        0.1  /scratch/users/vision/chandan/pacmed/gb   \n",
-       "4         gb        0.1  /scratch/users/vision/chandan/pacmed/gb   \n",
-       "\n",
-       "                    pid  cw_flipped_diff_train  cw_flipped_diff_p_train  \\\n",
-       "0  10646871537542481801              -0.012521                 0.078405   \n",
-       "1  86463448325324707014              -0.000807                 0.449455   \n",
-       "2  72321427046675171834              -0.003581                 0.324800   \n",
-       "3  73080375156272463361              -0.007132                 0.122626   \n",
-       "4  74783160552518244403              -0.001638                 0.423066   \n",
-       "\n",
-       "                           cw_loss_percentages_train  ...  \\\n",
-       "0  [6.018518518518518, 6.111111111111111, 6.20370...  ...   \n",
-       "1  [6.018518518518518, 6.111111111111111, 6.20370...  ...   \n",
-       "2  [6.018518518518518, 6.111111111111111, 6.20370...  ...   \n",
-       "3  [6.018518518518518, 6.111111111111111, 6.20370...  ...   \n",
-       "4  [6.018518518518518, 6.111111111111111, 6.20370...  ...   \n",
-       "\n",
-       "  pe_flipped_diff_p_test                           pe_loss_percentages_test  \\\n",
-       "0               0.470689  [18.055555555555557, 18.333333333333332, 18.61...   \n",
-       "1               0.226692  [18.055555555555557, 18.333333333333332, 18.61...   \n",
-       "2               0.084187  [18.055555555555557, 18.333333333333332, 18.61...   \n",
-       "3               0.063253  [18.055555555555557, 18.333333333333332, 18.61...   \n",
-       "4               0.362610  [18.055555555555557, 18.333333333333332, 18.61...   \n",
-       "\n",
-       "                           pe_loss_performances_test pe_loss_auc_test  \\\n",
-       "0  [88.33431023832314, 88.83270965560031, 89.3330...     20248.106659   \n",
-       "1  [73.70044851724408, 74.22251361305605, 74.7450...     17803.917915   \n",
-       "2  [48.91155412961351, 49.49696358445241, 51.0794...     14843.386836   \n",
-       "3  [72.72622245211723, 73.28847701427406, 73.8516...     18358.214357   \n",
-       "4  [61.909359754232476, 63.58460050279295, 64.128...     16758.155347   \n",
-       "\n",
-       "                             pe_auc_percentages_test  \\\n",
-       "0  [18.055555555555557, 18.333333333333332, 18.61...   \n",
-       "1  [18.055555555555557, 18.333333333333332, 18.61...   \n",
-       "2  [18.055555555555557, 18.333333333333332, 18.61...   \n",
-       "3  [18.055555555555557, 18.333333333333332, 18.61...   \n",
-       "4  [18.055555555555557, 18.333333333333332, 18.61...   \n",
-       "\n",
-       "                            pe_auc_performances_test pe_auc_auc_test  \\\n",
-       "0  [0.4208494208494209, 0.4221808014911464, 0.423...       36.035153   \n",
-       "1  [0.5819047619047619, 0.5833333333333334, 0.584...       48.798484   \n",
-       "2  [0.7847619047619048, 0.7870370370370371, 0.789...       63.245974   \n",
-       "3  [0.5482625482625483, 0.5442684063373718, 0.549...       43.569490   \n",
-       "4  [0.6618773946360152, 0.6626281453867662, 0.662...       52.782284   \n",
-       "\n",
-       "                            pe_calibration_pred_test  \\\n",
-       "0  [0.15340174516811111, 0.3205623240177217, 0.50...   \n",
-       "1  [0.16057567037288972, 0.33380072349805534, 0.4...   \n",
-       "2  [0.16453236458886983, 0.3384541256039423, 0.48...   \n",
-       "3  [0.16995324258995165, 0.32527788458364687, 0.5...   \n",
-       "4  [0.14705911565129884, 0.3332083494314001, 0.50...   \n",
-       "\n",
-       "                            pe_calibration_true_test  pe_calibration_rmse_test  \n",
-       "0  [0.5, 0.5294117647058824, 0.5470588235294118, ...                  0.344009  \n",
-       "1  [0.5, 0.37362637362637363, 0.5319148936170213,...                  0.204525  \n",
-       "2  [0.25, 0.30337078651685395, 0.4769230769230769...                  0.103648  \n",
-       "3  [1.0, 0.5280898876404494, 0.4672897196261682, ...                  0.392887  \n",
-       "4  [0.25, 0.43373493975903615, 0.4708994708994709...                  0.126191  \n",
-       "\n",
-       "[5 rows x 51 columns]"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "results.head()"
+    "# results.describe()"
    ]
   },
   {
@@ -379,95 +130,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
-    "r['auc_auc_diff'] = r.cw_auc_auc_test - r.pe_auc_auc_test"
+    "r['auc_auc_diff'] = r.cw_auc_auc_test - r.pe_auc_auc_test\n",
+    "r['calibration_diff'] = r.cw_calibration_rmse_test - r.pe_calibration_rmse_test"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "43    57.401295\n",
-       "55     9.484514\n",
-       "32     9.150031\n",
-       "72     7.764597\n",
-       "44     5.962876\n",
-       "7      2.106081\n",
-       "66     1.701094\n",
-       "3      1.547846\n",
-       "36     0.774567\n",
-       "0      0.665496\n",
-       "40     0.515248\n",
-       "41     0.377883\n",
-       "70     0.161719\n",
-       "28     0.092260\n",
-       "52     0.062829\n",
-       "27     0.061560\n",
-       "35     0.033582\n",
-       "25     0.020568\n",
-       "54     0.009966\n",
-       "37     0.008907\n",
-       "8      0.000000\n",
-       "57     0.000000\n",
-       "49    -0.001464\n",
-       "34    -0.002570\n",
-       "48    -0.003556\n",
-       "53    -0.008916\n",
-       "68    -0.022363\n",
-       "56    -0.035038\n",
-       "47    -0.042384\n",
-       "45    -0.044334\n",
-       "        ...    \n",
-       "6     -3.898860\n",
-       "1     -4.011105\n",
-       "2     -4.046654\n",
-       "62    -4.683050\n",
-       "23    -4.828152\n",
-       "4     -5.373442\n",
-       "9           NaN\n",
-       "10          NaN\n",
-       "11          NaN\n",
-       "12          NaN\n",
-       "13          NaN\n",
-       "14          NaN\n",
-       "15          NaN\n",
-       "16          NaN\n",
-       "17          NaN\n",
-       "18          NaN\n",
-       "19          NaN\n",
-       "20          NaN\n",
-       "22          NaN\n",
-       "24          NaN\n",
-       "26          NaN\n",
-       "38          NaN\n",
-       "46          NaN\n",
-       "50          NaN\n",
-       "51          NaN\n",
-       "59          NaN\n",
-       "61          NaN\n",
-       "64          NaN\n",
-       "69          NaN\n",
-       "71          NaN\n",
-       "Name: auc_auc_diff, Length: 74, dtype: float64"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "r2 = r\n",
-    "r2 = r2.sort_values(by='auc_auc_diff', ascending=False)\n",
-    "r2.auc_auc_diff\n",
-    "# r2"
+    "r2 = r2.sort_values(by='calibration_diff', ascending=False)\n",
+    "r2[['auc_auc_diff', 'calibration_diff']]"
    ]
   },
   {
@@ -498,7 +177,7 @@
    ],
    "source": [
     "print('\\\\begin{tabular}{l c c}')\n",
-    "print('Dataset\\t&\\tClass-weight uncertainty AUC\\t&\\tUncertainty entropy AUC \\\\\\\\')\n",
+    "print('Dataset\\t&\\tClass-weight uncertainty AUC\\t&\\tPredictive entropy AUC \\\\\\\\')\n",
     "print('\\hline')\n",
     "for i in range(10):\n",
     "    row = r2.iloc[i]\n",
@@ -506,20 +185,6 @@
     "    print(f'{name}\\t&\\t{row.cw_auc_auc_test:0.2f}\\t&\\t{row.pe_auc_auc_test:0.2f}\\\\\\\\')\n",
     "print('\\end{tabular}')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
