--- a/interp/eda_interp.ipynb
+++ b/interp/eda_interp.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,65 +87,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<style  type=\"text/css\" >\n",
-       "    #T_8b04250e_ae1c_11e9_a8ab_002590e83e0arow0_col0 {\n",
+       "    #T_b5a38daa_ae48_11e9_a8ab_002590e83e0arow0_col0 {\n",
        "            color:  black;\n",
        "            background-color:  #da3b46;\n",
-       "        }    #T_8b04250e_ae1c_11e9_a8ab_002590e83e0arow0_col1 {\n",
+       "        }    #T_b5a38daa_ae48_11e9_a8ab_002590e83e0arow0_col1 {\n",
        "            color:  black;\n",
        "            background-color:  #417ca8;\n",
-       "        }    #T_8b04250e_ae1c_11e9_a8ab_002590e83e0arow1_col0 {\n",
+       "        }    #T_b5a38daa_ae48_11e9_a8ab_002590e83e0arow1_col0 {\n",
        "            color:  black;\n",
        "            background-color:  #c1d5e3;\n",
-       "        }    #T_8b04250e_ae1c_11e9_a8ab_002590e83e0arow1_col1 {\n",
+       "        }    #T_b5a38daa_ae48_11e9_a8ab_002590e83e0arow1_col1 {\n",
        "            color:  black;\n",
        "            background-color:  #6897ba;\n",
-       "        }    #T_8b04250e_ae1c_11e9_a8ab_002590e83e0arow2_col0 {\n",
+       "        }    #T_b5a38daa_ae48_11e9_a8ab_002590e83e0arow2_col0 {\n",
        "            color:  black;\n",
        "            background-color:  #ebf2f7;\n",
-       "        }    #T_8b04250e_ae1c_11e9_a8ab_002590e83e0arow2_col1 {\n",
+       "        }    #T_b5a38daa_ae48_11e9_a8ab_002590e83e0arow2_col1 {\n",
        "            color:  black;\n",
        "            background-color:  #f2f2f2;\n",
-       "        }    #T_8b04250e_ae1c_11e9_a8ab_002590e83e0arow3_col0 {\n",
+       "        }    #T_b5a38daa_ae48_11e9_a8ab_002590e83e0arow3_col0 {\n",
        "            color:  black;\n",
        "            background-color:  #f2f2f2;\n",
-       "        }    #T_8b04250e_ae1c_11e9_a8ab_002590e83e0arow3_col1 {\n",
+       "        }    #T_b5a38daa_ae48_11e9_a8ab_002590e83e0arow3_col1 {\n",
        "            color:  black;\n",
        "            background-color:  #f2f2f2;\n",
-       "        }</style><table id=\"T_8b04250e_ae1c_11e9_a8ab_002590e83e0a\" ><thead>    <tr>        <th class=\"blank level0\" ></th>        <th class=\"col_heading level0 col0\" >contribution</th>        <th class=\"col_heading level0 col1\" >sensitivity</th>    </tr></thead><tbody>\n",
+       "        }</style><table id=\"T_b5a38daa_ae48_11e9_a8ab_002590e83e0a\" ><thead>    <tr>        <th class=\"blank level0\" ></th>        <th class=\"col_heading level0 col0\" >contribution</th>        <th class=\"col_heading level0 col1\" >sensitivity</th>    </tr></thead><tbody>\n",
        "                <tr>\n",
-       "                        <th id=\"T_8b04250e_ae1c_11e9_a8ab_002590e83e0alevel0_row0\" class=\"row_heading level0 row0\" >x1</th>\n",
-       "                        <td id=\"T_8b04250e_ae1c_11e9_a8ab_002590e83e0arow0_col0\" class=\"data row0 col0\" >-0.021</td>\n",
-       "                        <td id=\"T_8b04250e_ae1c_11e9_a8ab_002590e83e0arow0_col1\" class=\"data row0 col1\" >0.053</td>\n",
+       "                        <th id=\"T_b5a38daa_ae48_11e9_a8ab_002590e83e0alevel0_row0\" class=\"row_heading level0 row0\" >x1</th>\n",
+       "                        <td id=\"T_b5a38daa_ae48_11e9_a8ab_002590e83e0arow0_col0\" class=\"data row0 col0\" >-0.021</td>\n",
+       "                        <td id=\"T_b5a38daa_ae48_11e9_a8ab_002590e83e0arow0_col1\" class=\"data row0 col1\" >0.053</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                        <th id=\"T_8b04250e_ae1c_11e9_a8ab_002590e83e0alevel0_row1\" class=\"row_heading level0 row1\" >x0</th>\n",
-       "                        <td id=\"T_8b04250e_ae1c_11e9_a8ab_002590e83e0arow1_col0\" class=\"data row1 col0\" >0.006</td>\n",
-       "                        <td id=\"T_8b04250e_ae1c_11e9_a8ab_002590e83e0arow1_col1\" class=\"data row1 col1\" >0.041</td>\n",
+       "                        <th id=\"T_b5a38daa_ae48_11e9_a8ab_002590e83e0alevel0_row1\" class=\"row_heading level0 row1\" >x0</th>\n",
+       "                        <td id=\"T_b5a38daa_ae48_11e9_a8ab_002590e83e0arow1_col0\" class=\"data row1 col0\" >0.006</td>\n",
+       "                        <td id=\"T_b5a38daa_ae48_11e9_a8ab_002590e83e0arow1_col1\" class=\"data row1 col1\" >0.041</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                        <th id=\"T_8b04250e_ae1c_11e9_a8ab_002590e83e0alevel0_row2\" class=\"row_heading level0 row2\" >x2</th>\n",
-       "                        <td id=\"T_8b04250e_ae1c_11e9_a8ab_002590e83e0arow2_col0\" class=\"data row2 col0\" >0.001</td>\n",
-       "                        <td id=\"T_8b04250e_ae1c_11e9_a8ab_002590e83e0arow2_col1\" class=\"data row2 col1\" >0.002</td>\n",
+       "                        <th id=\"T_b5a38daa_ae48_11e9_a8ab_002590e83e0alevel0_row2\" class=\"row_heading level0 row2\" >x2</th>\n",
+       "                        <td id=\"T_b5a38daa_ae48_11e9_a8ab_002590e83e0arow2_col0\" class=\"data row2 col0\" >0.001</td>\n",
+       "                        <td id=\"T_b5a38daa_ae48_11e9_a8ab_002590e83e0arow2_col1\" class=\"data row2 col1\" >0.002</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                        <th id=\"T_8b04250e_ae1c_11e9_a8ab_002590e83e0alevel0_row3\" class=\"row_heading level0 row3\" >x3</th>\n",
-       "                        <td id=\"T_8b04250e_ae1c_11e9_a8ab_002590e83e0arow3_col0\" class=\"data row3 col0\" >0</td>\n",
-       "                        <td id=\"T_8b04250e_ae1c_11e9_a8ab_002590e83e0arow3_col1\" class=\"data row3 col1\" >0.001</td>\n",
+       "                        <th id=\"T_b5a38daa_ae48_11e9_a8ab_002590e83e0alevel0_row3\" class=\"row_heading level0 row3\" >x3</th>\n",
+       "                        <td id=\"T_b5a38daa_ae48_11e9_a8ab_002590e83e0arow3_col0\" class=\"data row3 col0\" >0</td>\n",
+       "                        <td id=\"T_b5a38daa_ae48_11e9_a8ab_002590e83e0arow3_col1\" class=\"data row3 col1\" >0.001</td>\n",
        "            </tr>\n",
        "    </tbody></table>"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x7fcbb9982b70>"
+       "<pandas.io.formats.style.Styler at 0x7f0753ad5f28>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -211,12 +211,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "expl_dict = explainer.explain_instance(x, models[1].predict_proba, return_table=False)\n",
-    "explainer.viz_expl(expl_dict, filename='out.html')"
+    "explainer.calc_percentiles(models[1].predict_proba, models[0].predict_proba, \n",
+    "                           models[2].predict_proba)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "s <br>Prediction: <span style=\"color:rgb(57, 138, 242);font-weight:bold;font-size:40px\">1.74</span>\t             Uncertainty: <span style=\"color:rgb(57, 138, 242);font-weight:bold;font-size:40px\">1.51</span><br><span style=\"color:gray;font-size:13px\">Perc. 100</span>\t                                   <span style=\"color:gray;font-size:13px\">Perc. 100</span><br>\t <span style=\"font-weight:italic;font-size:15px\">Point ID: Unknown</span><br>\n"
+     ]
+    }
+   ],
+   "source": [
+    "expl_dicts = []\n",
+    "for i in range(3):\n",
+    "    expl_dicts.append(explainer.explain_instance(x, models[i].predict_proba, return_table=False))\n",
+    "explainer.viz_expl(expl_dicts[1], [expl_dicts[0], expl_dicts[2]], filename='out.html')"
    ]
   },
   {
