--- a/interp/interp_breast_cancer.ipynb
+++ b/interp/interp_breast_cancer.ipynb
@@ -521,20 +521,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(426,)"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "explainer.calc_percentiles(models[1].predict_proba, models[0].predict_proba, \n",
     "                           models[2].predict_proba)"
@@ -542,21 +531,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
     "expl_dicts = []\n",
     "for i in range(3):\n",
-    "    expl_dicts.append(explainer.explain_instance(x, models[i].predict_proba, class_num, return_table=False))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    expl_dicts.append(explainer.explain_instance(x, models[i].predict_proba, class_num, return_table=False))\n",
     "explainer.viz_expl(expl_dicts[1], [expl_dicts[0], expl_dicts[2]], filename='out_breast_cancer.html')"
    ]
   },
