--- a/interp/interp_breast_cancer.ipynb
+++ b/interp/interp_breast_cancer.ipynb
@@ -531,14 +531,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
     "expl_dicts = []\n",
     "for i in range(3):\n",
     "    expl_dicts.append(explainer.explain_instance(x, models[i].predict_proba, class_num, return_table=False))\n",
-    "explainer.viz_expl(expl_dicts[1], [expl_dicts[0], expl_dicts[2]], filename='out_breast_cancer.html')"
+    "explainer.viz_expl(expl_dicts[1], [expl_dicts[0], expl_dicts[2]], \n",
+    "                   point_id='ID001', filename='out_breast_cancer.html')"
    ]
   },
   {
