--- a/experiments/interp/eda_interp.ipynb
+++ b/experiments/interp/eda_interp.ipynb
@@ -13,7 +13,7 @@
     "import numpy as np\n",
     "from copy import deepcopy\n",
     "import pandas as pd\n",
-    "sys.path.append('../src')\n",
+    "sys.path.append('../../src')\n",
     "import lcp\n",
     "from sklearn.linear_model import LogisticRegression"
    ]
