--- a/experiments/interp/interp_breast_cancer.ipynb
+++ b/experiments/interp/interp_breast_cancer.ipynb
@@ -2,9 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -22,7 +30,7 @@
     "import random\n",
     "from copy import deepcopy\n",
     "import pandas as pd\n",
-    "sys.path.append('../src')\n",
+    "sys.path.append('../../src')\n",
     "import lcp\n",
     "from sklearn import datasets\n",
     "from sklearn.linear_model import LogisticRegression\n",
