--- a/experiments/interp_eda/eda_interp.ipynb
+++ b/experiments/interp_eda/eda_interp.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -13,7 +22,7 @@
     "import numpy as np\n",
     "from copy import deepcopy\n",
     "import pandas as pd\n",
-    "sys.path.append('../../src')\n",
+    "sys.path.append('../../../src')\n",
     "import lcp\n",
     "from sklearn.linear_model import LogisticRegression"
    ]
@@ -27,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,65 +96,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<style  type=\"text/css\" >\n",
-       "    #T_b5a38daa_ae48_11e9_a8ab_002590e83e0arow0_col0 {\n",
+       "    #T_3d273a0a_b502_11e9_a8ab_002590e83e0arow0_col0 {\n",
        "            color:  black;\n",
        "            background-color:  #da3b46;\n",
-       "        }    #T_b5a38daa_ae48_11e9_a8ab_002590e83e0arow0_col1 {\n",
+       "        }    #T_3d273a0a_b502_11e9_a8ab_002590e83e0arow0_col1 {\n",
        "            color:  black;\n",
        "            background-color:  #417ca8;\n",
-       "        }    #T_b5a38daa_ae48_11e9_a8ab_002590e83e0arow1_col0 {\n",
+       "        }    #T_3d273a0a_b502_11e9_a8ab_002590e83e0arow1_col0 {\n",
        "            color:  black;\n",
        "            background-color:  #c1d5e3;\n",
-       "        }    #T_b5a38daa_ae48_11e9_a8ab_002590e83e0arow1_col1 {\n",
+       "        }    #T_3d273a0a_b502_11e9_a8ab_002590e83e0arow1_col1 {\n",
        "            color:  black;\n",
        "            background-color:  #6897ba;\n",
-       "        }    #T_b5a38daa_ae48_11e9_a8ab_002590e83e0arow2_col0 {\n",
+       "        }    #T_3d273a0a_b502_11e9_a8ab_002590e83e0arow2_col0 {\n",
        "            color:  black;\n",
        "            background-color:  #ebf2f7;\n",
-       "        }    #T_b5a38daa_ae48_11e9_a8ab_002590e83e0arow2_col1 {\n",
+       "        }    #T_3d273a0a_b502_11e9_a8ab_002590e83e0arow2_col1 {\n",
        "            color:  black;\n",
        "            background-color:  #f2f2f2;\n",
-       "        }    #T_b5a38daa_ae48_11e9_a8ab_002590e83e0arow3_col0 {\n",
+       "        }    #T_3d273a0a_b502_11e9_a8ab_002590e83e0arow3_col0 {\n",
        "            color:  black;\n",
        "            background-color:  #f2f2f2;\n",
-       "        }    #T_b5a38daa_ae48_11e9_a8ab_002590e83e0arow3_col1 {\n",
+       "        }    #T_3d273a0a_b502_11e9_a8ab_002590e83e0arow3_col1 {\n",
        "            color:  black;\n",
        "            background-color:  #f2f2f2;\n",
-       "        }</style><table id=\"T_b5a38daa_ae48_11e9_a8ab_002590e83e0a\" ><thead>    <tr>        <th class=\"blank level0\" ></th>        <th class=\"col_heading level0 col0\" >contribution</th>        <th class=\"col_heading level0 col1\" >sensitivity</th>    </tr></thead><tbody>\n",
+       "        }</style><table id=\"T_3d273a0a_b502_11e9_a8ab_002590e83e0a\" ><thead>    <tr>        <th class=\"blank level0\" ></th>        <th class=\"col_heading level0 col0\" >contribution</th>        <th class=\"col_heading level0 col1\" >sensitivity</th>    </tr></thead><tbody>\n",
        "                <tr>\n",
-       "                        <th id=\"T_b5a38daa_ae48_11e9_a8ab_002590e83e0alevel0_row0\" class=\"row_heading level0 row0\" >x1</th>\n",
-       "                        <td id=\"T_b5a38daa_ae48_11e9_a8ab_002590e83e0arow0_col0\" class=\"data row0 col0\" >-0.021</td>\n",
-       "                        <td id=\"T_b5a38daa_ae48_11e9_a8ab_002590e83e0arow0_col1\" class=\"data row0 col1\" >0.053</td>\n",
+       "                        <th id=\"T_3d273a0a_b502_11e9_a8ab_002590e83e0alevel0_row0\" class=\"row_heading level0 row0\" >x1</th>\n",
+       "                        <td id=\"T_3d273a0a_b502_11e9_a8ab_002590e83e0arow0_col0\" class=\"data row0 col0\" >-0.021</td>\n",
+       "                        <td id=\"T_3d273a0a_b502_11e9_a8ab_002590e83e0arow0_col1\" class=\"data row0 col1\" >0.053</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                        <th id=\"T_b5a38daa_ae48_11e9_a8ab_002590e83e0alevel0_row1\" class=\"row_heading level0 row1\" >x0</th>\n",
-       "                        <td id=\"T_b5a38daa_ae48_11e9_a8ab_002590e83e0arow1_col0\" class=\"data row1 col0\" >0.006</td>\n",
-       "                        <td id=\"T_b5a38daa_ae48_11e9_a8ab_002590e83e0arow1_col1\" class=\"data row1 col1\" >0.041</td>\n",
+       "                        <th id=\"T_3d273a0a_b502_11e9_a8ab_002590e83e0alevel0_row1\" class=\"row_heading level0 row1\" >x0</th>\n",
+       "                        <td id=\"T_3d273a0a_b502_11e9_a8ab_002590e83e0arow1_col0\" class=\"data row1 col0\" >0.006</td>\n",
+       "                        <td id=\"T_3d273a0a_b502_11e9_a8ab_002590e83e0arow1_col1\" class=\"data row1 col1\" >0.041</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                        <th id=\"T_b5a38daa_ae48_11e9_a8ab_002590e83e0alevel0_row2\" class=\"row_heading level0 row2\" >x2</th>\n",
-       "                        <td id=\"T_b5a38daa_ae48_11e9_a8ab_002590e83e0arow2_col0\" class=\"data row2 col0\" >0.001</td>\n",
-       "                        <td id=\"T_b5a38daa_ae48_11e9_a8ab_002590e83e0arow2_col1\" class=\"data row2 col1\" >0.002</td>\n",
+       "                        <th id=\"T_3d273a0a_b502_11e9_a8ab_002590e83e0alevel0_row2\" class=\"row_heading level0 row2\" >x2</th>\n",
+       "                        <td id=\"T_3d273a0a_b502_11e9_a8ab_002590e83e0arow2_col0\" class=\"data row2 col0\" >0.001</td>\n",
+       "                        <td id=\"T_3d273a0a_b502_11e9_a8ab_002590e83e0arow2_col1\" class=\"data row2 col1\" >0.002</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                        <th id=\"T_b5a38daa_ae48_11e9_a8ab_002590e83e0alevel0_row3\" class=\"row_heading level0 row3\" >x3</th>\n",
-       "                        <td id=\"T_b5a38daa_ae48_11e9_a8ab_002590e83e0arow3_col0\" class=\"data row3 col0\" >0</td>\n",
-       "                        <td id=\"T_b5a38daa_ae48_11e9_a8ab_002590e83e0arow3_col1\" class=\"data row3 col1\" >0.001</td>\n",
+       "                        <th id=\"T_3d273a0a_b502_11e9_a8ab_002590e83e0alevel0_row3\" class=\"row_heading level0 row3\" >x3</th>\n",
+       "                        <td id=\"T_3d273a0a_b502_11e9_a8ab_002590e83e0arow3_col0\" class=\"data row3 col0\" >0</td>\n",
+       "                        <td id=\"T_3d273a0a_b502_11e9_a8ab_002590e83e0arow3_col1\" class=\"data row3 col1\" >0.001</td>\n",
        "            </tr>\n",
        "    </tbody></table>"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x7f0753ad5f28>"
+       "<pandas.io.formats.style.Styler at 0x7f4706c8c6a0>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
