add uncertainty scores to sim

--- a/experiments/interp_sim/interp_sim_reg.ipynb
+++ b/experiments/interp_sim/interp_sim_reg.ipynb
@@ -35,6 +35,8 @@
     "from compare_stats import compare_stats\n",
     "import gen_data\n",
     "import imgkit \n",
+    "from style import style_tab\n",
+    "\n",
     "\n",
     "# sklearn models\n",
     "from sklearn.model_selection import train_test_split\n",
@@ -248,29 +250,7 @@
     }
    ],
    "source": [
-    "tab"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from visualize import background_gradient, cm\n",
-    "\n",
-    "def style_tab(tab):\n",
-    "    vals = tab\n",
-    "    # vals = vals.drop(('r2', ''), axis=1)\n",
-    "    vals = vals.style.applymap(lambda val : 'color: black')\n",
-    "\n",
-    "    importances = ['ice-contrib', 'ice-sensitivity', 'lime', 'shap']\n",
-    "    vals = vals.apply(background_gradient, axis=None, \n",
-    "                            cmap=cm, cmin=0, cmax=1)\n",
-    "    vals = vals.apply(background_gradient, axis=None, \n",
-    "                            cmap=cm, cmin=-1, cmax=1,\n",
-    "                            subset=[(imp, 'Rank Corr') for imp in importances])\n",
-    "    return vals"
+    "style_tab(tab)"
    ]
   },
   {
