--- a/experiments/nlp/interp_bert_sst.ipynb
+++ b/experiments/nlp/interp_bert_sst.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -17,39 +17,78 @@
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
-    "\n",
-    "from tqdm import tqdm\n",
-    "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
-    "import pickle as pkl\n",
-    "from os.path import join as oj\n",
-    "from copy import deepcopy\n",
-    "import pandas as pd\n",
-    "import numpy.random as npr\n",
-    "import seaborn as sns\n",
-    "import time\n",
-    "sys.path.append('../../src')\n",
-    "sys.path.append('../../interp')\n",
-    "import utils, lcp, train\n",
-    "from scipy.stats import ttest_ind, spearmanr\n",
-    "from typing import Dict\n",
-    "\n",
-    "# sklearn models\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn import metrics\n",
-    "from all_scores import get_scores\n",
-    "\n",
-    "cred = (234 / 255, 51 / 255, 86 / 255)\n",
-    "cblue = (57 / 255, 138 / 255, 242 / 255)\n",
     "out_dir = '../../results/nlp'\n",
-    "os.makedirs(out_dir, exist_ok=True)"
+    "os.makedirs(out_dir, exist_ok=True)\n",
+    "\n",
+    "import torch\n",
+    "from pytorch_transformers import BertTokenizer, BertForMaskedLM, BertForSequenceClassification, BertConfig"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 35,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "# import the trained model"
+    "def pred(s: str, tokenizer, model):\n",
+    "    '''Predict for a string given tokenizer and model (returns class 1)\n",
+    "    '''\n",
+    "    with torch.no_grad():\n",
+    "        print('encoded', tokenizer.convert_ids_to_tokens(tokenizer.encode(s)))\n",
+    "        input_ids = torch.tensor(tokenizer.encode(s)).unsqueeze(0)  # Batch size 1\n",
+    "        pred = model(input_ids)[0].detach().softmax(dim=1).numpy().flatten()\n",
+    "    return pred"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mdir = '/scratch/users/vision/chandan/pacmed/glue/SST-2-middle/'\n",
+    "config = BertConfig.from_pretrained(mdir)\n",
+    "tokenizer = BertTokenizer.from_pretrained(mdir)\n",
+    "clf = BertForSequenceClassification(config).eval()\n",
+    "masked_predictor = BertForMaskedLM.from_pretrained(mdir).eval()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "text = 'amazing, wonderful, great movie'\n",
+    "text = 'terrible awful movie'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "encoded ['terrible', 'awful', 'movie']\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([0.5204421 , 0.47955787], dtype=float32)"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pred(text, tokenizer, clf)"
    ]
   },
   {
@@ -58,8 +97,163 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "k"
+    "# Tokenize input\n",
+    "text = \"[CLS] This great movie was very good . [SEP] I thoroughly enjoyed it [SEP]\"\n",
+    "tokenized_text = tokenizer.tokenize(text)\n",
+    "print(tokenized_text)\n",
+    "\n",
+    "# Mask a token that we will try to predict back with `BertForMaskedLM`\n",
+    "masked_index = 6\n",
+    "tokenized_text[masked_index] = '[MASK]'\n",
+    "\n",
+    "assert tokenized_text == ['[CLS]', 'this', 'great', 'movie', 'was', 'very', '[MASK]', '.', \n",
+    "                          '[SEP]', 'i', 'thoroughly', 'enjoyed', 'it', '[SEP]']\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Convert token to vocabulary indices\n",
+    "indexed_tokens = tokenizer.convert_tokens_to_ids(tokenized_text)\n",
+    "segment_ids = np.zeros(len(tokenized_text))\n",
+    "segment_ids[7:] = 1\n",
+    "# segments_ids = [0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1]\n",
+    "\n",
+    "# Convert inputs to PyTorch tensors\n",
+    "tokens_tensor = torch.tensor([indexed_tokens])\n",
+    "segments_tensors = torch.tensor([segments_ids])\n",
+    "\n",
+    "# If you have a GPU, put everything on cuda\n",
+    "tokens_tensor = tokens_tensor.to('cuda')\n",
+    "segments_tensors = segments_tensors.to('cuda')\n",
+    "masked_predictor.to('cuda')\n",
+    "\n",
+    "# Predict all tokens\n",
+    "with torch.no_grad():\n",
+    "    outputs = masked_predictor(tokens_tensor, token_type_ids=segments_tensors)\n",
+    "    predictions = outputs[0]\n",
+    "\n",
+    "# confirm we were able to predict 'henson'\n",
+    "predicted_index = torch.argmax(predictions[0, masked_index]).item()\n",
+    "predicted_token = tokenizer.convert_ids_to_tokens([predicted_index])[0]\n",
+    "print(predicted_token)\n",
+    "assert predicted_token == 'henson'\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# sanity checks"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load pre-trained model tokenizer (vocabulary)\n",
+    "tokenizer = BertTokenizer.from_pretrained(mdir)\n",
+    "\n",
+    "# Tokenize input\n",
+    "text = \"[CLS] Who was Jim Henson ? [SEP] Jim Henson was a puppeteer [SEP]\"\n",
+    "tokenized_text = tokenizer.tokenize(text)\n",
+    "\n",
+    "# Mask a token that we will try to predict back with `BertForMaskedLM`\n",
+    "masked_index = 8\n",
+    "tokenized_text[masked_index] = '[MASK]'\n",
+    "assert tokenized_text == ['[CLS]', 'who', 'was', 'jim', 'henson', '?', '[SEP]', 'jim', '[MASK]', 'was', 'a', 'puppet', '##eer', '[SEP]']\n",
+    "\n",
+    "# Convert token to vocabulary indices\n",
+    "indexed_tokens = tokenizer.convert_tokens_to_ids(tokenized_text)\n",
+    "# Define sentence A and B indices associated to 1st and 2nd sentences (see paper)\n",
+    "segments_ids = [0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1]\n",
+    "\n",
+    "# Convert inputs to PyTorch tensors\n",
+    "tokens_tensor = torch.tensor([indexed_tokens])\n",
+    "segments_tensors = torch.tensor([segments_ids])\n",
+    "\n",
+    "# Load pre-trained model (weights)\n",
+    "model = BertForMaskedLM.from_pretrained(mdir)\n",
+    "model.eval()\n",
+    "\n",
+    "# If you have a GPU, put everything on cuda\n",
+    "tokens_tensor = tokens_tensor.to('cuda')\n",
+    "segments_tensors = segments_tensors.to('cuda')\n",
+    "model.to('cuda')\n",
+    "\n",
+    "# Predict all tokens\n",
+    "with torch.no_grad():\n",
+    "    outputs = model(tokens_tensor, token_type_ids=segments_tensors)\n",
+    "    predictions = outputs[0]\n",
+    "\n",
+    "# confirm we were able to predict 'henson'\n",
+    "predicted_index = torch.argmax(predictions[0, masked_index]).item()\n",
+    "predicted_token = tokenizer.convert_ids_to_tokens([predicted_index])[0]\n",
+    "\n",
+    "assert predicted_token == 'henson'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "crisp\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(predicted_token)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "inds_max = np.argsort(predictions[0, masked_index].detach().cpu())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([21844, 26217, 20688,  ...,  8897, 15558, 15594])"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "inds_max"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tokenizer.convert_ids_to_tokens(inds_max)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
