--- a/experiments/nlp/interp_bert_sst.ipynb
+++ b/experiments/nlp/interp_bert_sst.ipynb
@@ -43,11 +43,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
-    "mdir = '/scratch/users/vision/chandan/pacmed/glue/SST-2-middle/'\n",
+    "mdir = 'bert-base-uncased' # '/scratch/users/vision/chandan/pacmed/glue/SST-2-middle/'\n",
     "config = BertConfig.from_pretrained(mdir)\n",
     "tokenizer = BertTokenizer.from_pretrained(mdir)\n",
     "clf = BertForSequenceClassification(config).eval()\n",
@@ -56,33 +56,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
     "text = 'amazing, wonderful, great movie'\n",
-    "text = 'terrible awful movie'"
+    "text = 'terrible awful movie'\n",
+    "text = 'The actors are terrible.'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "encoded ['terrible', 'awful', 'movie']\n"
+      "encoded ['the', 'actors', 'are', 'terrible', '.']\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "array([0.5204421 , 0.47955787], dtype=float32)"
+       "array([0.5856249, 0.4143751], dtype=float32)"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -93,167 +94,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Tokenize input\n",
-    "text = \"[CLS] This great movie was very good . [SEP] I thoroughly enjoyed it [SEP]\"\n",
-    "tokenized_text = tokenizer.tokenize(text)\n",
-    "print(tokenized_text)\n",
-    "\n",
-    "# Mask a token that we will try to predict back with `BertForMaskedLM`\n",
-    "masked_index = 6\n",
-    "tokenized_text[masked_index] = '[MASK]'\n",
-    "\n",
-    "assert tokenized_text == ['[CLS]', 'this', 'great', 'movie', 'was', 'very', '[MASK]', '.', \n",
-    "                          '[SEP]', 'i', 'thoroughly', 'enjoyed', 'it', '[SEP]']\n",
-    "\n",
-    "\n",
-    "\n",
-    "# Convert token to vocabulary indices\n",
-    "indexed_tokens = tokenizer.convert_tokens_to_ids(tokenized_text)\n",
-    "segment_ids = np.zeros(len(tokenized_text))\n",
-    "segment_ids[7:] = 1\n",
-    "# segments_ids = [0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1]\n",
-    "\n",
-    "# Convert inputs to PyTorch tensors\n",
-    "tokens_tensor = torch.tensor([indexed_tokens])\n",
-    "segments_tensors = torch.tensor([segments_ids])\n",
-    "\n",
-    "# If you have a GPU, put everything on cuda\n",
-    "tokens_tensor = tokens_tensor.to('cuda')\n",
-    "segments_tensors = segments_tensors.to('cuda')\n",
-    "masked_predictor.to('cuda')\n",
-    "\n",
-    "# Predict all tokens\n",
-    "with torch.no_grad():\n",
-    "    outputs = masked_predictor(tokens_tensor, token_type_ids=segments_tensors)\n",
-    "    predictions = outputs[0]\n",
-    "\n",
-    "# confirm we were able to predict 'henson'\n",
-    "predicted_index = torch.argmax(predictions[0, masked_index]).item()\n",
-    "predicted_token = tokenizer.convert_ids_to_tokens([predicted_index])[0]\n",
-    "print(predicted_token)\n",
-    "assert predicted_token == 'henson'\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# sanity checks"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Load pre-trained model tokenizer (vocabulary)\n",
-    "tokenizer = BertTokenizer.from_pretrained(mdir)\n",
-    "\n",
-    "# Tokenize input\n",
-    "text = \"[CLS] Who was Jim Henson ? [SEP] Jim Henson was a puppeteer [SEP]\"\n",
-    "tokenized_text = tokenizer.tokenize(text)\n",
-    "\n",
-    "# Mask a token that we will try to predict back with `BertForMaskedLM`\n",
-    "masked_index = 8\n",
-    "tokenized_text[masked_index] = '[MASK]'\n",
-    "assert tokenized_text == ['[CLS]', 'who', 'was', 'jim', 'henson', '?', '[SEP]', 'jim', '[MASK]', 'was', 'a', 'puppet', '##eer', '[SEP]']\n",
-    "\n",
-    "# Convert token to vocabulary indices\n",
-    "indexed_tokens = tokenizer.convert_tokens_to_ids(tokenized_text)\n",
-    "# Define sentence A and B indices associated to 1st and 2nd sentences (see paper)\n",
-    "segments_ids = [0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1]\n",
-    "\n",
-    "# Convert inputs to PyTorch tensors\n",
-    "tokens_tensor = torch.tensor([indexed_tokens])\n",
-    "segments_tensors = torch.tensor([segments_ids])\n",
-    "\n",
-    "# Load pre-trained model (weights)\n",
-    "model = BertForMaskedLM.from_pretrained(mdir)\n",
-    "model.eval()\n",
-    "\n",
-    "# If you have a GPU, put everything on cuda\n",
-    "tokens_tensor = tokens_tensor.to('cuda')\n",
-    "segments_tensors = segments_tensors.to('cuda')\n",
-    "model.to('cuda')\n",
-    "\n",
-    "# Predict all tokens\n",
-    "with torch.no_grad():\n",
-    "    outputs = model(tokens_tensor, token_type_ids=segments_tensors)\n",
-    "    predictions = outputs[0]\n",
-    "\n",
-    "# confirm we were able to predict 'henson'\n",
-    "predicted_index = torch.argmax(predictions[0, masked_index]).item()\n",
-    "predicted_token = tokenizer.convert_ids_to_tokens([predicted_index])[0]\n",
-    "\n",
-    "assert predicted_token == 'henson'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "crisp\n"
+      "['[CLS]', 'this', 'great', 'movie', 'was', 'very', '[MASK]', '.', '[SEP]', 'i', 'thoroughly', 'enjoyed', 'it', '[SEP]']\n",
+      "entertaining\t10.70\n",
+      "good\t10.58\n",
+      "popular\t9.66\n",
+      "successful\t9.62\n",
+      "exciting\t9.60\n",
+      "enjoyable\t9.29\n",
+      "funny\t9.28\n",
+      "interesting\t9.02\n",
+      "satisfying\t8.63\n",
+      "beautiful\t8.33\n",
+      "special\t8.33\n",
+      "fun\t8.22\n",
+      "impressive\t8.04\n",
+      "important\t7.74\n",
+      "wonderful\t7.55\n",
+      "emotional\t7.52\n",
+      "moving\t7.49\n",
+      "effective\t7.47\n",
+      "engaging\t7.40\n",
+      "original\t7.39\n"
      ]
     }
    ],
    "source": [
-    "print(predicted_token)"
+    "def predict_masked(masked_predictor, tokenizer,\n",
+    "                   text=\"[CLS] This great movie was very good . [SEP] I thoroughly enjoyed it [SEP]\",\n",
+    "                   masked_index=6):\n",
+    "    tokenized_text = tokenizer.tokenize(text)\n",
+    "\n",
+    "    # Mask a token that we will try to predict back with `BertForMaskedLM`\n",
+    "    tokenized_text[masked_index] = '[MASK]'\n",
+    "    print(tokenized_text)\n",
+    "    assert tokenized_text == ['[CLS]', 'this', 'great', 'movie', 'was', 'very', '[MASK]', '.', \n",
+    "                              '[SEP]', 'i', 'thoroughly', 'enjoyed', 'it', '[SEP]']\n",
+    "\n",
+    "    # Convert token to vocabulary indices\n",
+    "    indexed_tokens = tokenizer.convert_tokens_to_ids(tokenized_text)\n",
+    "    segment_ids = np.zeros(len(tokenized_text))\n",
+    "    segment_ids[7:] = 1\n",
+    "\n",
+    "    # Convert inputs to PyTorch tensors\n",
+    "    tokens_tensor = torch.tensor([indexed_tokens])\n",
+    "    segments_tensors = torch.tensor([segments_ids])\n",
+    "\n",
+    "    # If you have a GPU, put everything on cuda\n",
+    "    tokens_tensor = tokens_tensor.to('cuda')\n",
+    "    segments_tensors = segments_tensors.to('cuda')\n",
+    "    masked_predictor.to('cuda')\n",
+    "\n",
+    "    # Predict all tokens\n",
+    "    with torch.no_grad():\n",
+    "        outputs = masked_predictor(tokens_tensor, token_type_ids=segments_tensors)\n",
+    "        predictions = outputs[0]\n",
+    "\n",
+    "    preds_masked = predictions[0, masked_index].detach().cpu().numpy()\n",
+    "    inds_max = np.argsort(preds_masked)[::-1]\n",
+    "    return inds_max, preds_masked\n",
+    "\n",
+    "text = \"[CLS] This great movie was very good . [SEP] I thoroughly enjoyed it [SEP]\"\n",
+    "inds_max, preds_masked = predict_masked(masked_predictor,\n",
+    "                                        tokenizer,\n",
+    "                                        text=text,\n",
+    "                                        masked_index=6)\n",
+    "for ind in inds_max[:20]:\n",
+    "    print(f'{tokenizer.convert_ids_to_tokens([ind])[0]}\\t{preds_masked[ind]:0.2f}')\n",
+    "\n",
+    "# tokenizer.convert_ids_to_tokens(inds_max[::-1])[:10]\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 59,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "inds_max = np.argsort(predictions[0, masked_index].detach().cpu())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 61,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([21844, 26217, 20688,  ...,  8897, 15558, 15594])"
-      ]
-     },
-     "execution_count": 61,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "inds_max"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tokenizer.convert_ids_to_tokens(inds_max)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
