fix nlp classifier

--- a/experiments/nlp/interp_bert_sst.ipynb
+++ b/experiments/nlp/interp_bert_sst.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 216,
    "metadata": {},
    "outputs": [
     {
@@ -20,156 +20,193 @@
     "import numpy as np\n",
     "out_dir = '../../results/nlp'\n",
     "os.makedirs(out_dir, exist_ok=True)\n",
-    "\n",
+    "from tqdm import tqdm\n",
     "import torch\n",
     "from pytorch_transformers import BertTokenizer, BertForMaskedLM, BertForSequenceClassification, BertConfig"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 217,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def pred(s: str, tokenizer, model):\n",
-    "    '''Predict for a string given tokenizer and model (returns class 1)\n",
-    "    '''\n",
-    "    with torch.no_grad():\n",
-    "        print('encoded', tokenizer.convert_ids_to_tokens(tokenizer.encode(s)))\n",
-    "        input_ids = torch.tensor(tokenizer.encode(s)).unsqueeze(0)  # Batch size 1\n",
-    "        pred = model(input_ids)[0].detach().softmax(dim=1).numpy().flatten()\n",
-    "    return pred"
+    "from util import *\n",
+    "device = 'cpu'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 218,
    "metadata": {},
    "outputs": [],
    "source": [
-    "mdir = 'bert-base-uncased' # '/scratch/users/vision/chandan/pacmed/glue/SST-2-middle/'\n",
-    "config = BertConfig.from_pretrained(mdir)\n",
+    "default = 'bert-base-uncased'\n",
+    "mdir = '/scratch/users/vision/chandan/pacmed/glue/SST-2-3epoch' # '/scratch/users/vision/chandan/pacmed/glue/SST-2-middle/'\n",
+    "\n",
+    "t = 'This great movie was very'\n",
+    "fill = 'good'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 230,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "tokenizer = BertTokenizer.from_pretrained(mdir)\n",
-    "clf = BertForSequenceClassification(config).eval()\n",
-    "masked_predictor = BertForMaskedLM.from_pretrained(mdir).eval()"
+    "clf = BertForSequenceClassification.from_pretrained(mdir)\n",
+    "masked_predictor = BertForMaskedLM.from_pretrained(default).eval().to(device)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 73,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "text = 'amazing, wonderful, great movie'\n",
-    "text = 'terrible awful movie'\n",
-    "text = 'The actors are terrible.'"
+    "**look at an individual prediction**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 227,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "encoded ['the', 'actors', 'are', 'terrible', '.']\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "array([0.5856249, 0.4143751], dtype=float32)"
+       "0.0007611739"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 227,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "text = 'worst movie' #'amazing, wonderful, great, beautiful, gorgeous, incredible, best movie actress'\n",
     "pred(text, tokenizer, clf)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**predicted masked token**"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 231,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['[CLS]', 'this', 'great', 'movie', 'was', 'very', '[MASK]', '.', '[SEP]', 'i', 'thoroughly', 'enjoyed', 'it', '[SEP]']\n",
-      "entertaining\t10.70\n",
-      "good\t10.58\n",
-      "popular\t9.66\n",
-      "successful\t9.62\n",
-      "exciting\t9.60\n",
-      "enjoyable\t9.29\n",
-      "funny\t9.28\n",
-      "interesting\t9.02\n",
-      "satisfying\t8.63\n",
-      "beautiful\t8.33\n",
-      "special\t8.33\n",
-      "fun\t8.22\n",
-      "impressive\t8.04\n",
-      "important\t7.74\n",
-      "wonderful\t7.55\n",
-      "emotional\t7.52\n",
-      "moving\t7.49\n",
-      "effective\t7.47\n",
-      "engaging\t7.40\n",
-      "original\t7.39\n"
+      "entertaining\t0.16\n",
+      "good\t0.14\n",
+      "popular\t0.06\n",
+      "successful\t0.05\n",
+      "exciting\t0.05\n",
+      "enjoyable\t0.04\n",
+      "funny\t0.04\n",
+      "interesting\t0.03\n",
+      "satisfying\t0.02\n",
+      "beautiful\t0.02\n",
+      "special\t0.02\n",
+      "fun\t0.01\n",
+      "impressive\t0.01\n",
+      "important\t0.01\n",
+      "wonderful\t0.01\n",
+      "emotional\t0.01\n",
+      "moving\t0.01\n",
+      "effective\t0.01\n",
+      "engaging\t0.01\n",
+      "original\t0.01\n"
      ]
     }
    ],
    "source": [
-    "def predict_masked(masked_predictor, tokenizer,\n",
-    "                   text=\"[CLS] This great movie was very good . [SEP] I thoroughly enjoyed it [SEP]\",\n",
-    "                   masked_index=6):\n",
-    "    tokenized_text = tokenizer.tokenize(text)\n",
-    "\n",
-    "    # Mask a token that we will try to predict back with `BertForMaskedLM`\n",
-    "    tokenized_text[masked_index] = '[MASK]'\n",
-    "    print(tokenized_text)\n",
-    "    assert tokenized_text == ['[CLS]', 'this', 'great', 'movie', 'was', 'very', '[MASK]', '.', \n",
-    "                              '[SEP]', 'i', 'thoroughly', 'enjoyed', 'it', '[SEP]']\n",
-    "\n",
-    "    # Convert token to vocabulary indices\n",
-    "    indexed_tokens = tokenizer.convert_tokens_to_ids(tokenized_text)\n",
-    "    segment_ids = np.zeros(len(tokenized_text))\n",
-    "    segment_ids[7:] = 1\n",
-    "\n",
-    "    # Convert inputs to PyTorch tensors\n",
-    "    tokens_tensor = torch.tensor([indexed_tokens])\n",
-    "    segments_tensors = torch.tensor([segments_ids])\n",
-    "\n",
-    "    # If you have a GPU, put everything on cuda\n",
-    "    tokens_tensor = tokens_tensor.to('cuda')\n",
-    "    segments_tensors = segments_tensors.to('cuda')\n",
-    "    masked_predictor.to('cuda')\n",
-    "\n",
-    "    # Predict all tokens\n",
-    "    with torch.no_grad():\n",
-    "        outputs = masked_predictor(tokens_tensor, token_type_ids=segments_tensors)\n",
-    "        predictions = outputs[0]\n",
-    "\n",
-    "    preds_masked = predictions[0, masked_index].detach().cpu().numpy()\n",
-    "    inds_max = np.argsort(preds_masked)[::-1]\n",
-    "    return inds_max, preds_masked\n",
-    "\n",
-    "text = \"[CLS] This great movie was very good . [SEP] I thoroughly enjoyed it [SEP]\"\n",
+    "text = f\"[CLS] {t} {fill} . [SEP] I thoroughly enjoyed it [SEP]\"\n",
     "inds_max, preds_masked = predict_masked(masked_predictor,\n",
     "                                        tokenizer,\n",
     "                                        text=text,\n",
     "                                        masked_index=6)\n",
-    "for ind in inds_max[:20]:\n",
-    "    print(f'{tokenizer.convert_ids_to_tokens([ind])[0]}\\t{preds_masked[ind]:0.2f}')\n",
     "\n",
-    "# tokenizer.convert_ids_to_tokens(inds_max[::-1])[:10]\n"
+    "for ind in inds_max[:20]:\n",
+    "    print(f'{tokenizer.convert_ids_to_tokens([ind])[0]}\\t{preds_masked[ind]:0.2f}')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**calculate predictions varying the masked token**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "  0%|          | 0/30522 [00:00<?, ?it/s]\u001b[A\n",
+      "  0%|          | 2/30522 [00:00<46:45, 10.88it/s]\u001b[A\n",
+      "  0%|          | 4/30522 [00:00<46:17, 10.99it/s]\u001b[A\n",
+      "  0%|          | 6/30522 [00:00<45:07, 11.27it/s]\u001b[A\n",
+      "  0%|          | 8/30522 [00:00<44:43, 11.37it/s]\u001b[A\n",
+      "  0%|          | 10/30522 [00:00<44:08, 11.52it/s]\u001b[A\n",
+      "  0%|          | 12/30522 [00:01<43:54, 11.58it/s]\u001b[A"
+     ]
+    }
+   ],
+   "source": [
+    "n = 30522 # 30522\n",
+    "vals = np.zeros(n)\n",
+    "weights = np.zeros(n)\n",
+    "is_rand = np.random.choice(range(30522), size=n, replace=False)\n",
+    "\n",
+    "for j in tqdm(range(n)):\n",
+    "    i = is_rand[j] # generate a random index\n",
+    "    sampled_word = inds_max[i]\n",
+    "    \n",
+    "    s = f'{t} {tokenizer.convert_ids_to_tokens([sampled_word])[0]}'\n",
+    "    vals[j] = pred(s, tokenizer, clf)\n",
+    "    weights[j] = preds_masked[sampled_word]\n",
+    "    \n",
+    "ave = np.mean(vals)\n",
+    "ave_weighted = np.average(vals, weights=weights)\n",
+    "pred_good = pred(f'{t} good', tokenizer, clf)\n",
+    "pred_bad = pred(f'{t} bad', tokenizer, clf)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 233,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ave=0.817 ave_weighted=0.902 pred_good=0.997 pred_bad=0.003\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'ave={ave:0.3f} ave_weighted={ave_weighted:0.3f} pred_good={pred_good:0.3f} pred_bad={pred_bad:.3f}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
